add: securities interaction API
