# docs/swagger.json
@@ -53,47 +53,6 @@
                 }
             }
         },
-        "/misc/sync/instruments": {
-            "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Sync intruments dimension",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "misc"
-                ],
-                "summary": "Sync intruments",
-                "operationId": "sync-instruments",
-                "responses": {
-                    "200": {
-                        "description": "Returns success status",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/api.commonResponse"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Returns when any processing error occurs",
-                        "schema": {
-                            "$ref": "#/definitions/api.errorResponse"
-                        }
-                    },
-                    "401": {
-                        "description": "Returns when authentication error occurs",
-                        "schema": {
-                            "$ref": "#/definitions/api.errorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/misc/sync/price": {
             "get": {
                 "security": [
@@ -766,6 +725,159 @@
                 }
             }
         },
+        "/securities": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Gets securities avaliable",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "securities"
+                ],
+                "summary": "Get securities",
+                "operationId": "get-securities",
+                "parameters": [
+                    {
+                        "enum": [
+                            "none",
+                            "ticker",
+                            "isin",
+                            "figi"
+                        ],
+                        "type": "string",
+                        "default": "none",
+                        "description": "Filter by",
+                        "name": "filter",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter value",
+                        "name": "by",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Returns success status",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Instrument"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Returns when any processing error occurs",
+                        "schema": {
+                            "$ref": "#/definitions/api.errorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Returns when authentication error occurs",
+                        "schema": {
+                            "$ref": "#/definitions/api.errorResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Adds securities",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "securities"
+                ],
+                "summary": "Add securities",
+                "operationId": "add-securities",
+                "parameters": [
+                    {
+                        "description": "Instrument info",
+                        "name": "instrument",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Instrument"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Returns success status",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Instrument"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Returns when any processing error occurs",
+                        "schema": {
+                            "$ref": "#/definitions/api.errorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Returns when authentication error occurs",
+                        "schema": {
+                            "$ref": "#/definitions/api.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/securities/sync": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Sync intruments dimension",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "securities"
+                ],
+                "summary": "Sync securities",
+                "operationId": "sync-securities",
+                "responses": {
+                    "200": {
+                        "description": "Returns success status",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/api.commonResponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Returns when any processing error occurs",
+                        "schema": {
+                            "$ref": "#/definitions/api.errorResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Returns when authentication error occurs",
+                        "schema": {
+                            "$ref": "#/definitions/api.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/token/validate": {
             "get": {
                 "security": [
@@ -1040,6 +1152,39 @@
                 },
                 "token": {
                     "type": "string"
+                }
+            }
+        },
+        "models.Instrument": {
+            "type": "object",
+            "properties": {
+                "currency": {
+                    "type": "string",
+                    "example": "USD"
+                },
+                "figi": {
+                    "type": "string",
+                    "example": "BBG000HLJ7M4"
+                },
+                "isin": {
+                    "type": "string",
+                    "example": "US45867G1013"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "InterDigItal Inc"
+                },
+                "priceUptdTime": {
+                    "type": "string",
+                    "example": "2020-06-06T15:54:05Z"
+                },
+                "ticker": {
+                    "type": "string",
+                    "example": "IDCC"
+                },
+                "type": {
+                    "type": "string",
+                    "example": "Stock"
                 }
             }
         },
